# mpw-rs

./: Cargo.toml  README.md
src/: algorithm.rs  clear_on_drop.rs  config.rs  main.rs
