[package]
name = "mpw"
version = "0.0.1"
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
description = "A stateless password management solution."
readme = "README.md"
license = "MIT"
repository = "https://github.com/vks/mpw-rs"

[dependencies]
lazy_static = "0.2"
byteorder = "1"
rpassword = "0.4"
serde = "1"
serde_derive = "1"
ring = "0.7"
ring-pwhash = "0.1"
data-encoding = "1"
libc = "0.2"
errno = "0.2"
toml = "0.4"

[dependencies.clap]
version = "2.11.2"
features = ["unstable", "color"]

[profile.dev]
opt-level = 2  # otherwise the tests run for too long
