[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
description = "A stateless password management solution."
license = "MIT"
name = "mpw"
readme = "README.md"
repository = "https://github.com/vks/mpw-rs"
version = "0.0.1"

[dependencies]
byteorder = "1"
conv = "0.3.3"
data-encoding = "1"
errno = "0.2"
lazy_static = "0.2"
libc = "0.2"
ring = "0.9"
ring-pwhash = "0.2"
rpassword = "0.4"
serde = "1"
serde_derive = "1"
toml = "0.4"
zxcvbn = "0.6"

[dependencies.clap]
features = ["unstable", "color"]
version = "2.25"

[profile]

[profile.dev]
opt-level = 2
