[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
description = "A stateless password management solution."
license = "MIT"
name = "mpw"
readme = "README.md"
repository = "https://github.com/vks/mpw-rs"
version = "0.0.1"

[dependencies]
byteorder = "1"
conv = "0.3.3"
data-encoding = "1"
errno = "0.2"
lazy_static = "1"
libc = "0.2"
ring = "0.12"
ring-pwhash = "0.12"
rpassword = "2"
serde = "1"
serde_derive = "1"
toml = "0.4"
zxcvbn = "1"

[dependencies.clap]
features = ["unstable", "color"]
version = "2.25"

[profile]

[profile.dev]
opt-level = 2
